ircv3_parse_derive/tests/ui/ser/fail/source_missing_name.stderr
error: source `name` field is required when using `user` or `host fields
 --> tests/ui/ser/fail/source_missing_name.rs:4:8
  |
4 | struct M<'a> {
  |        ^
